--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   },
   "lint-staged": {
     "src/**/*": [
-      "yarn lint --fix", "yarn test --bail"
+      "yarn lint --fix",
+      "yarn test --findRelatedTests --bail"
     ]
   },
   "dependencies": {
@@ -21,7 +22,8 @@
     "eslint-plugin-prettier": "^3.4.0",
     "next": "11.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "styled-components": "^5.3.0"
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.15.0",
@@ -30,14 +32,17 @@
     "@types/jest": "^27.0.1",
     "@types/node": "^16.6.2",
     "@types/react": "^17.0.19",
+    "@types/styled-components": "^5.1.12",
     "@typescript-eslint/eslint-plugin": "^4.29.2",
     "@typescript-eslint/parser": "^4.29.2",
+    "babel-plugin-styled-components": "^1.13.2",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.0",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "^7.0.0",
     "jest": "^27.0.6",
+    "jest-styled-components": "^7.0.5",
     "lint-staged": "^11.1.2",
     "prettier": "2.3.2",
     "typescript": "^4.3.5"
