--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "test:watch": "yarn test --watch",
     "prepare": "husky install",
     "storybook": "start-storybook -s ./public -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook -s ./public",
+    "postinstall": "husky install"
   },
   "lint-staged": {
     "src/**/*": [
